<resources>
    <string name="app_name">О, да вы математик</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="zeroPercent">0.00%</string>
    <string name="total">Итого решено примеров</string>
    <string name="rightAnswers">Решено правильно</string>
    <string name="loseAnswers">Решено неверно</string>
    <string name="checking">Проверка</string>
    <string name="next">Далее</string>
    <string name="percent">%1$s %</string>


</resources>