<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttonCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPercents">

        <TextView
            android:id="@+id/textViewFirstOperand"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="3"
            android:gravity="center"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewSign"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="3"
            android:gravity="center"
            android:text="@string/plus"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewSecondOperand"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="3"
            android:gravity="center"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="3"
            android:gravity="center"
            android:text="@string/equal"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextUserAnswer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="3"
            android:gravity="center"
            android:hint="@string/zero"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:importantForAutofill="no" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewPercents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zeroPercent"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="1"
            android:gravity="center"
            android:text="@string/total"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewTotalCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="1"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textViewPercents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rightAnswers"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewRightCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loseAnswers"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewLoseCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="checkButtonClick"
        android:text="@string/checking"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="nextButtonClick"
        android:text="@string/next"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>